questionaire.html done

--- a/src/questionnaire.html
+++ b/src/questionnaire.html
@@ -27,21 +27,20 @@
 			</a>
 			<a href="#">
 				<img src="images/icon_user.png" >
-				<i class="user-content">會員登入/註冊</i>
 			</a>
 			<a href="#">
 				<img src="./images/icon_home.png"  />
 			</a>
 		</div>
 	</div>
-	<img src="./images/pc_kv_other.png" alt="kv-banner"></img>
+	<img src="./images/m_kv.jpg" alt="kv-banner"></img>
 </div>
 
 
 
 <!-- 问卷调查标题 -->
 <div class="questionnaire-survey-head">
-	<img src="images/WechatIMG33.png" alt="" />
+	<img src="images/m_bear_001.png" alt="" />
 	<p>亞培媽媽教室課後問卷調查表</p>
 </div>
 
@@ -300,7 +299,7 @@
 				<p class="question-text">6、請問您曾經參加過最滿意的媽媽教室是?满意的理由是</p>
 				<form class="questionnaire-survey-textarea-form">
 					<div class="form-group">
-						<textarea class="form-control" rows="4"></textarea>
+						<textarea class="form-control" rows="5"></textarea>
 					</div>
 				</form> 
 			</div>
@@ -309,7 +308,7 @@
 				<p class="question-text">7、請問今天您的最大收穫是？</p>
 				<form class="questionnaire-survey-textarea-form">
 					<div class="form-group">
-						<textarea class="form-control" rows="4"></textarea>
+						<textarea class="form-control" rows="5"></textarea>
 					</div>
 				</form> 
 			</div>
@@ -318,7 +317,7 @@
 				<p class="question-text">8、請問您希望給亞培媽咪學苑的建議是？</p>
 				<form class="questionnaire-survey-textarea-form">
 					<div class="form-group">
-						<textarea class="form-control" rows="4"></textarea>
+						<textarea class="form-control" rows="5"></textarea>
 					</div>
 				</form> 
 			</div>
@@ -338,7 +337,7 @@
 
 
 <!-- 底部版权 -->
-<img class="buttom-img" src="images/footer_bg.png" alt="" />
+<img class="buttom-img" src="images/m_footer_bg.png" alt="" />
 <div class="copyright">
 	<div class="copyright-text">
 		<p >使用條款 | 隱私權保護 | 聯絡我們 </p>
@@ -346,13 +345,6 @@
 	</div>
 </div>
 
-<!-- <div class="copyright">
-		<img class="buttom-img" src="images/footer_bg.png" alt="" />
-		<div>
-			<p >使用條款 | 隱私權保護 | 聯絡我們 </p>
-			<p >Copyright&copy;2018 Abbott</p>
-		</div>
-	</div> -->
 
 
 
