reservations,html done

--- a/src/reservations.html
+++ b/src/reservations.html
@@ -27,14 +27,13 @@
 			</a>
 			<a href="#">
 				<img src="images/icon_user.png" >
-				<i class="user-content">會員登入/註冊</i>
 			</a>
 			<a href="#">
 				<img src="./images/icon_home.png"  />
 			</a>
 		</div>
 	</div>
-	<img src="./images/pc_kv_other.png" alt="kv-banner"></img>
+	<img src="./images/m_kv.jpg" alt="kv-banner"></img>
 </div>
 
 
@@ -43,16 +42,14 @@
 <!-- 预约成功正文 -->
 <div class="reservation-seccess">
 		<div class="reservation-seccess-container">
+			<div class="reservation-seccess-container-img">
+				<img src="./images/m_bear_002.png" alt=""></img>
+			</div>
 			<div class="reservation-seccess-paragraphy">
 				<div>
 					<img src="./images/icon_ok.png" alt=""></img>
 					<p>恭喜您預約成功！</p>
-					<p>&nbsp;活動當天請記得攜帶媽媽手冊於課程開始前30分鐘準時報到，預約座位僅保留到課程開始前15分鐘，活動資訊和亞培媽咪學苑注意事項詳列如下，歡迎準時出席。</p>
-				</div>
-				<div>
-					<div class="reservation-seccess-img">
-						<img src="./images/bear_1.png" alt=""></img>
-					</div>
+					<p>&nbsp;&nbsp;活動當天請記得攜帶媽媽手冊於課程開始前30分鐘準時報到，預約座位僅保留到課程開始前15分鐘，活動資訊和亞培媽咪學苑注意事項詳列如下，歡迎準時出席。</p>
 				</div>
 			</div>
 			<!-- <div class="reservation-seccess-img">
@@ -61,19 +58,19 @@
 
 			<div class="reservation-seccess-container-p1">
 				<div>
-					<span>活動主題：</span>
+					<div><img src="./images/m_title.png" alt=""/>活動主題</div>
                     <span>孕媽咪產檢Q/A&nbsp;&nbsp;黃金培育營養學&nbsp;&nbsp;輕鬆了解臍帶血</span>
 				</div>
 				<div>
-					<span>主講講師：</span>
+					<div><img src="./images/m_contact.png" alt=""/>主講講師</div>
                     <span>杏芳婦產科督導-蔡老師&nbsp;&nbsp;雅培專業講師&nbsp;&nbsp;聖寶專業講師</span>
 				</div>
 				<div>
-					<span>活動時間：</span>
+					<div><img src="./images/m_time.png" alt=""/>活動時間</div>
                     <span>2018-02-03&nbsp;&nbsp;10：00-12：30</span>
 				</div>
 				<div>
-					<span>活動地點：</span>
+					<div><img src="./images/m_position.png" alt=""/>活動地點</div>
                     <span>林口福榮飯店&nbsp;桃園市新山區文二路一街78號</span>
 				</div>
 			</div>
@@ -90,8 +87,8 @@
 
 			
 
-			<div class="questionnaire-survey-btn-group">
-				<div class="questionnaire-survey-btn-group1">
+			<div class="reservation-seccess-btn-group">
+				<div class="reservation-seccess-btn-group1">
 					<button type="button" class="btn btn-gray">返回首頁</button>
 					<button type="button" class="btn btn-orange">列印此页</button>
 				</div>
@@ -105,7 +102,7 @@
 
 
 <!-- 底部版权 -->
-<img class="buttom-img" src="images/footer_bg.png" alt="" />
+<img class="buttom-img" src="images/m_footer_bg.png" alt="" />
 <div class="copyright">
 	<div class="copyright-text">
 		<p >使用條款 | 隱私權保護 | 聯絡我們 </p>
