--- a/src/reservations.html
+++ b/src/reservations.html
@@ -105,8 +105,10 @@
 <img class="buttom-img" src="images/m_footer_bg.png" alt="" />
 <div class="copyright">
 	<div class="copyright-text">
-		<p >使用條款 | 隱私權保護 | 聯絡我們 </p>
-		<p >Copyright&nbsp;&copy;&nbsp;2018&nbsp;Abbott</p>
+		<p >亞培育兒專線：0800-008-828 | 使用條款 | 隱私權保護</p>
+		<p >Copyright&nbsp;&copy;&nbsp;2018&nbsp;Abbott&nbsp;Laboratories&nbsp;Services&nbsp;Corp.Taiwan</p>
+		<p >Branch, R.O.C. All &nbsp;Rights&nbsp; Reserved.</p>
+		<img src="./images/logo_white.png" alt=""/>
 	</div>
 </div>
 
