--- a/src/index.html
+++ b/src/index.html
@@ -142,9 +142,9 @@
 
     <!-- 推荐场次 -->
     <div class="recomm">
-      <!-- <div>
-        <img  src="./images/recomm.png" >
-      </div> -->
+      <div>
+        <img  src="./images/m_recomm.png" >
+      </div>
       <div class="recommContent">
         <div>活動主題</div>
         <div>
@@ -179,9 +179,9 @@
     </div>
 
     <div class="recomm">
-      <!-- <div>
-          <img  src="./images/recomm.png" >
-        </div> -->
+        <div>
+            <img  src="./images/m_recomm.png" >
+          </div>
       <div class="recommContent">
         <div>活動主題</div>
         <div>
@@ -215,7 +215,7 @@
       </div>
     </div>
 
-    <div class=" attention">
+    <div class="attention">
       <div>亞培媽咪學苑注意事項：</div>
       <p>1、席位有限，請先預約報名以免向隅。</p>
       <p>2、預約報名者享有優先兌換贈品權利，座位保留至開課前15分鐘，請準時入場。</p>
@@ -226,7 +226,15 @@
     </div>
   </div>
   <!-- 底部版权 -->
-
+  <img class="buttom-img" src="images/m_footer_bg.png" alt="" />
+  <div class="copyright">
+      <div class="copyright-text">
+          <p >亞培育兒專線：0800-008-828 | 使用條款 | 隱私權保護</p>
+          <p >Copyright&nbsp;&copy;&nbsp;2018&nbsp;Abbott&nbsp;Laboratories&nbsp;Services&nbsp;Corp.Taiwan</p>
+          <p >Branch, R.O.C. All &nbsp;Rights&nbsp; Reserved.</p>
+          <img src="./images/logo_white.png" alt=""/>
+      </div>
+  </div>
 
   <!-- Tab panes -->
 
