--- a/src/questionnaire.html
+++ b/src/questionnaire.html
@@ -325,14 +325,37 @@
 			<div class="questionnaire-survey-btn-group">
 				<div class="questionnaire-survey-btn-group1">
 					<button type="button" class="btn btn-gray">上一步</button>
-					<button type="button" class="btn btn-orange">提交</button>
+					<button type="button" class="btn btn-orange" data-toggle="modal" data-target="#mobile_Modal01">提交</button>
 				</div>
 			</div>
 
 
-
-
 		</div>
+
+
+
+		<!-- Modal -->
+		<div class="modal fade" id="mobile_Modal01" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+				<div class="modal-dialog" role="document">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+								<span aria-hidden="true">&times;</span>
+							</button>
+							<h4 class="modal-title" id="myModalLabel"><img class="buttom-img" src="images/m_gift.png" alt="" />undefined</h4>
+						</div>
+						<div class="modal-body">
+							<p>
+							   感謝您的用心參加與回饋問卷，請於離場前出示”此畫面”向現場活動人員領取”<em>限量好孕禮</em>”一份，禮品僅限現場領取，恕不接受補發申請。祝 生產順利!  闔家安康!
+							</p>
+							<p>亞培活動組敬上</p>
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn-white" data-dismiss="modal">確定兌換</button>
+						</div>
+					</div>
+				</div>
+			</div>
 </div>
 
 
