--- a/src/details.html
+++ b/src/details.html
@@ -25,23 +25,19 @@
     <div class="head">
         <div class="headLink">
             <div>
-                <div>
-                    <a href="#">
-                        <img src="./images/logo.png" width="50%" />
-                    </a>
-                </div>
-                <div>
-                    <a href="#">
-                        <img src="./images/icon_home.png" width="10%" />
-                    </a>
-                    <a href="#">
-                        <img src="images/icon_user.png" width="13%">
-                        <span class="user-content">會員登入/註冊</span>
-                    </a>
-                </div>
+                <a href="#">
+                    <img src="./images/logo.png" />
+                </a>
+                <a href="#">
+                    <img src="images/icon_user.png">
+                </a>
+                <a href="#">
+                    <img src="./images/icon_home.png" />
+                </a>
             </div>
         </div>
-        <img src="./images/pc_kv.jpg" alt="kv-banner"></img>
+        <div class="headT"></div>
+        <img src="./images/m_kv.jpg" alt="kv-banner"></img>
     </div>
 
     <!-- content -->
@@ -49,15 +45,15 @@
         <!-- 轮播头部 -->
         <div class="contentNav">
             <div class="tab">
-                <button class="tabButton showButton">推薦場次</button>
-                <button class="tabButton">北部（含宜花)</button>
-                <button class="tabButton">中部</button>
-                <button class="tabButton">南部</button>
+                <div class="tabButton showButton">推薦場次</div>
+                <div class="tabButton">北部（含宜花)</div>
+                <div class="tabButton">中部</div>
+                <div class="tabButton">南部</div>
             </div>
-
         </div>
         <!-- 轮播内容 -->
         <div class="tab-content">
+            <!-- one -->
             <!-- content -->
             <div id="one" class="carousel  slide" data-ride="carousel">
                 <!-- Indicators -->
@@ -126,187 +122,176 @@
                     </div>
                 </div>
             </div>
+
         </div>
 
         <!-- next -->
         <div class=" detailsData">
-            <img src="./images/WechatIMG32.png" alt="recomm">
+            <img src="./images/m_bear_001.png" alt="recomm">
             <span>請確認活動資訊與填寫報名資料</span>
         </div>
-
         <!-- condition -->
-        <div class="indexCondition detialsindexCondition">
-            <div class="indexConditionOneImg">
-                <img src="./images/recomm.png" alt="recomm">
+        <!-- 推荐场次 -->
+        <div class="recomm">
+            <div>
+                <img src="./images/m_recomm.png">
             </div>
-            <div class="indexCondition-contentTwo">
-                <div class="indexConditionOne">
-                    <div class="indexConditionOneContent">
-                        <div>
-                            <div class="indexConditionOneContentData">
-                                <div>
-                                    <span>
-                                        <strong>02月</strong>
-                                    </span>
-                                    <span>2018年</span>
-                                </div>
-                                <div>
-                                    <span>
-                                        <strong>6</strong>
-                                    </span>
-                                    <span>日</span>
-                                </div>
-                                <div>10:20AM-13:30PM</div>
-                            </div>
-                            <div class="indexConditionOneContentMessage">
-                                <div>
-                                    <img src="./images/title.png" alt="title">
-                                    <span>活動主題：</span>
-                                    <span>孕媽咪產檢Q/A&nbsp;&nbsp;黃金培育營養學&nbsp;&nbsp;輕鬆了解臍帶血</span>
-                                </div>
-                                <div>
-                                    <img src="./images/zhujiangren.png" alt="title">
-                                    <span>主講講師：</span>
-                                    <span>杏芳婦產科督導-蔡老師&nbsp;&nbsp;雅培專業講師&nbsp;&nbsp;聖寶專業講師</span>
-                                </div>
-                                <div>
-                                    <img src="./images/position.png" alt="title">
-                                    <span>活動地點：</span>
-                                    <span>林口福榮飯店&nbsp;桃園市新山區文二路一街78號</span>
-                                </div>
-                                <div>
-                                    <img src="./images/phone.png" alt="title">
-                                    <span>報名專線：</span>
-                                    <span style="font-weight: 900">0800-008-800</span>
-                                </div>
-                                <div>
-                                    <img src="./images/time.png" alt="title">
-                                    <span>活動倒計時：</span>
-                                    <span class="article-time-line"></span>
-                                    <span class="article-time">1</span>
-                                    <span class="article-time">6</span>天
-                                </div>
-                            </div>
-                        </div>
-                        <div class="indexButtonSubmit">
-                            <button>立即报名</button>
-                        </div>
-                    </div>
+            <div class="recommContent">
+                <div>活動主題</div>
+                <div>
+                    <p>1、孕媽咪產檢Q/A</p>
+                    <p>2、黃金培育營養學</p>
+                    <p>3、輕鬆了解臍帶血</p>
+                </div>
+            </div>
+            <div class="recommContent">
+                <div>主講講師</div>
+                <div>
+                    <p>1、杏芳婦產科督導-蔡老師</p>
+                    <p>2、雅培專業講師</p>
+                    <p>3、聖寶專業講師</p>
+                </div>
+            </div>
+            <div class="recommOther">
+                <div>活動時間</div>
+                <div>
+                    2018-02-3&nbsp;10 : 00AM-12 : 30PM
+                </div>
+            </div>
+            <div class="recommOther2">
+                <div>活動地點</div>
+                <div>
+                    林口福榮飯店&nbsp;桃園市新山區文二路一街78號
                 </div>
             </div>
         </div>
 
-
-        <div class="indexCondition-contentTwo detialConditionOneContent">
-            <div class="detialConditionData">
-                <div class="detialConditionDataInputL">
-                    <span>
-                        <span>*</span>
-                        <span>媽媽姓名</span>
-                    </span>
-                    <input type="text" name="lname" />
-                </div>
-                <div class="detialConditionDataInputR">
-                    <span>
-                        <span>*</span>
-                        <span>電子郵件</span>
-                    </span>
-                    <input type="text" name="lname" />
-                </div>
-            </div>
-            <div class="detialConditionData">
-                <div class="detialConditionDataInputL">
-                    <span>
-                        <span>*</span>
-                        <span>媽媽生日</span>
-                    </span>
-                    <input type="text" name="lname" class="search-input" placeholder="yyyy-mm-dd" value="" id="dpd3" />
-                </div>
-                <div class="detialConditionDataInputR">
-                    <span>
-                        <span>*</span>
-                        <span>預產期</span>
-                    </span>
-                    <input type="text" name="lname" class="search-input" placeholder="yyyy-mm-dd" value="" id="dpd3" />
-                </div>
-            </div>
-            <div class="detialConditionData">
-                <div class="detialConditionDataInputL">
-                    <span>
-                        <span>&nbsp</span>
-                        <span>生產醫院</span>
-                    </span>
-                    <input type="text" name="lname" />
-                </div>
-                <div class="detialConditionDataInputR">
-                    <span>
-                        <span>*</span>
-                        <span>胎次</span>
-                    </span>
-
-                    <span class="detailNumber">第
-                        <input type="text" name="lname" />胎</span>
-                </div>
-            </div>
-
-            <div class="detialConditionData detialConditionCity">
+        <div class="detialsRecomm">
+            <div class="detialConditionDataInput">
                 <span>
-                    <span>&nbsp</span>
-                    <span>居住地址</span>
+                    <span>媽媽姓名</span>
+                    <span>*</span>
                 </span>
-                <div>
+                <input type="text" name="lname" />
+            </div>
+            <div class="detialConditionDataInput">
+                <span>
+                    <span>電子郵件</span>
+                    <span>*</span>
+                </span>
+                <input type="text" name="lname" />
+            </div>
+            <div class="detialConditionDataInput">
+                <span>
+                    <span>媽媽生日</span>
+                    <span>*</span>
+                </span>
+                <input type="text" name="lname" class="search-input" placeholder="yyyy-mm-dd" value="" id="dpd3" />
+            </div>
+
+            <div class="detialConditionDataInput">
+                <span>
+                    <span>預產期</span>
+                    <span>*</span>
+                </span>
+                <input type="text" name="lname" class="search-input" placeholder="yyyy-mm-dd" value="" id="dpd3" />
+            </div>
+
+            <div class="detialConditionDataInput">
+                <span>
+                    <span>胎次</span>
+                    <span>*</span>
+                </span>
+                <select>
+                    <option value="volvo">1</option>
+                    <option value="saab">2</option>
+                </select>
+            </div>
+
+            <div class="detialConditionDataInputHP">
+                <span>
+                    <span>生產醫院</span>
+                    <span>*</span>
+                </span>
+                <span>
                     <select type="text" name="">
-                        <option value="volvo">台北</option>
+                        <option value="volvo">請選擇縣市</option>
                         <option value="saab">上海</option>
                     </select>
-                    <select type="text" name="lname2">
-                        <option value="volvo">文山區</option>
+                    <select type="text" name="">
+                        <option value="volvo">請選擇區</option>
                         <option value="saab">上海</option>
                     </select>
-                    <input type="text" name="lname" />
-                </div>
-            </div>
-
-            <div class="detialConditionData detialConditionPhone">
-                <span>
-                    <span>*</span>
-                    <span>聯絡電話 (日)</span>
                 </span>
-                <div>
-                    <input type="text" name="lname" /> &nbsp -
-                    <input type="text" name="lname" /> &nbsp -
-                    <input type="text" name="lname" /> &nbsp (區碼+電話+分機)
-                </div>
             </div>
-
-            <div class="detialConditionData detialConditionPhone">
+            <div class="detialConditionDataInput">
                 <span>
-                    <span>*</span>
-                    <span>聯絡電話 (夜)</span>
+                    <span>&nbsp;</span>
+                    <span>&nbsp;</span>
                 </span>
-                <div>
-                    <input type="text" name="lname" /> &nbsp -
-                    <input type="text" name="lname" /> &nbsp -
-                    <input type="text" name="lname" /> &nbsp (區碼+電話+分機)
-                </div>
+                <select>
+                    <option value="volvo">請輸入生產醫院</option>
+                    <option value="saab">请选择</option>
+                </select>
             </div>
 
-            <div class="detialConditionData">
-                <div class="detialConditionDataInputL">
-                    <span>
-                        <span>*</span>
-                        <span>手機號碼</span>
-                    </span>
-                    <input type="text" name="lname" />
-                </div>
+            <div class="detialConditionDataInputHP">
+                <span>
+                    <span>居住地址</span>
+                    <span>&nbsp</span>
+                </span>
+                <span>
+                    <select type="text" name="">
+                        <option value="volvo">請選擇縣市</option>
+                        <option value="saab">上海</option>
+                    </select>
+                    <select type="text" name="">
+                        <option value="volvo">請選擇區</option>
+                        <option value="saab">上海</option>
+                    </select>
+                </span>
             </div>
+            <div class="detialConditionDataInput">
+                <span>
+                    <span></span>
+                    <span></span>
+                </span>
+                <input type="text" name="lname" placeholder="請輸入詳細地址" />
+            </div>
+
+            <div class="detialConditionDataInput">
+                <span>
+                    <span>聯絡電話(日)</span>
+                    <span>*</span>
+                </span>
+                <input type="text" name="lname" />
+            </div>
+            <div class="detialConditionDataInput">
+                <span>
+                    <span>聯絡電話(夜)</span>
+                    <span>&nbsp;</span>
+                </span>
+                <input type="text" name="lname" placeholder="區碼+電話+分機" />
+            </div>
+            <div class="detialConditionDataInput">
+                <span>
+                    <span>手機號碼</span>
+                    <span>*</span>
+                </span>
+                <input type="text" name="lname" />
+            </div>
+
+
             <div class="detailsItem">
-                <input type="checkbox" name="lname" /> 我已閱讀
-                <span>並同意亞培媽媽教室線上報名條款與隱私保護方針</span>且同意個人資料收集及使用關關規定。
+                <div>
+                    <input type="checkbox" name="lname" />
+                </div>
+                <div>我已閱讀
+                    <span data-toggle="modal" data-target="#myModal">並同意亞培媽媽教室線上報名條款與隱私保護方針</span>且同意個人資料收集及使用關關規定。</div>
             </div>
             <div class="detailsButton">
-                <button data-toggle="modal" data-target="#myModal">確認報名</button>
-                <button>放棄報名</button>
+                 <button>放棄報名</button>
+                <button>確認報名</button> 
             </div>
         </div>
 
@@ -331,26 +316,26 @@
             </div>
         </div>
 
-        <div class="indexCondition-contentTwo indexConditionOne attention">
-            <div>亞培媽咪學苑注意事項：</div>
-            <p>1、席位有限，請先預約報名以免向隅。</p>
-            <p>2、預約報名者享有優先兌換贈品權利，座位保留至開課前15分鐘，請準時入場。</p>
-            <p>3、為維護講座品質，謝絕攜帶孩童入場。</p>
-            <p>4、為維護著作財產權，現場禁止錄音、錄影。</p>
-            <p>5、活動當天若有停車需求，請依該場地停車辦法自費繳費。</p>
-            <p>* 以上若有造成不便之處敬請諒解。</p>
-        </div>
+
+    <div class="attention">
+        <div>亞培媽咪學苑注意事項：</div>
+        <p>1、席位有限，請先預約報名以免向隅。</p>
+        <p>2、預約報名者享有優先兌換贈品權利，座位保留至開課前15分鐘，請準時入場。</p>
+        <p>3、為維護講座品質，謝絕攜帶孩童入場。</p>
+        <p>4、為維護著作財產權，現場禁止錄音、錄影。</p>
+        <p>5、活動當天若有停車需求，請依該場地停車辦法自費繳費。</p>
+        <p>* 以上若有造成不便之處敬請諒解。</p>
     </div>
     </div>
 
     <!-- 底部版权 -->
-    <div class="foot">
-        <img class="buttom-img" src="./images/footer_bg.png" alt="footer_bg.png" />
-        <div class="copyright">
-            <div class="copyright-text">
-                <p>使用條款 | 隱私權保護 | 聯絡我們 </p>
-                <p>Copyright&nbsp;&copy;&nbsp;2018&nbsp;Abbott</p>
-            </div>
+    <img class="buttom-img" src="images/m_footer_bg.png" alt="" />
+    <div class="copyright">
+        <div class="copyright-text">
+            <p>亞培育兒專線：0800-008-828 | 使用條款 | 隱私權保護</p>
+            <p>Copyright&nbsp;&copy;&nbsp;2018&nbsp;Abbott&nbsp;Laboratories&nbsp;Services&nbsp;Corp.Taiwan</p>
+            <p>Branch, R.O.C. All &nbsp;Rights&nbsp; Reserved.</p>
+            <img src="./images/logo_white.png" alt="" />
         </div>
     </div>
 
