--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,9 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link href="./css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" type="text/css" href="./css/datepicker.min.css">
+  <link href="./css/bootstrap-datetimepicker.css" rel="stylesheet" type="text/css" />
 
   <link href="./css/index.css" rel="stylesheet" type="text/css" />
-
   <!--[if lt IE 9]>
     <script src="./js/html5shiv.min.js"></script>
     <script src="./js/respond.min.js"></script>
@@ -128,8 +127,15 @@
       <div class="className">
         <span>搜索課程 : </span>
         <div class="classInput">
-          <input type="text" class="search-input" placeholder="yyyy-mm-dd" value="" id="dpd1"> &nbsp;至&nbsp;
-          <input type="text" class="search-input" placeholder="yyyy-mm-dd" value="" id="dpd2">
+              <div class="iDate date">
+                   <input type="text"  placeholder="yyyy-mm-dd" >
+                   <button type="button" class="addOn"></button>
+              </div>
+          &nbsp;至&nbsp;
+          <div class="iDate date">
+              <input type="text"  placeholder="yyyy-mm-dd" >
+              <button type="button" class="addOn"></button>
+         </div>
         </div>
       </div>
       <div>
@@ -242,8 +248,8 @@
 
   <script src="./js/jquery.min.js"></script>
   <script src="./js/bootstrap.min.js"></script>
-  <script src="./js/datepicker.js"></script>
-  <script src="./js/datepicker.zh-TW.js"></script>
+  <script type="text/javascript" src="./js/moment.js"></script>
+  <script type="text/javascript" src="./js/bootstrap-datetimepicker.js"></script>
   <script src="./js/index.js"></script>
 
 </body>
