--- a/src/details.html
+++ b/src/details.html
@@ -202,10 +202,14 @@
                     <span>胎次</span>
                     <span>*</span>
                 </span>
-                <select>
+                <div>
+                    <input type="text" name="lname" />
+                    <span class="glyphicon glyphicon-chevron-down"></span>
+                </div>
+                <!-- <select>
                     <option value="volvo">1</option>
                     <option value="saab">2</option>
-                </select>
+                </select> -->
             </div>
 
             <div class="detialConditionDataInputHP">
@@ -229,10 +233,11 @@
                     <span>&nbsp;</span>
                     <span>&nbsp;</span>
                 </span>
-                <select>
-                    <option value="volvo">請輸入生產醫院</option>
-                    <option value="saab">请选择</option>
-                </select>
+                <div>
+                    <input type="text" name="lname" placeholder="請輸入生產醫院" />
+                    <span class="glyphicon glyphicon-chevron-down"></span>
+                </div>
+
             </div>
 
             <div class="detialConditionDataInputHP">
@@ -240,6 +245,16 @@
                     <span>居住地址</span>
                     <span>&nbsp</span>
                 </span>
+                <!-- <div>
+                    <div>
+                        <input type="text" name="lname" placeholder="請輸入生產醫院" />
+                        <span class="glyphicon glyphicon-chevron-down"></span>
+                    </div>
+                    <div>
+                        <input type="text" name="lname" placeholder="請輸入生產醫院" />
+                        <span class="glyphicon glyphicon-chevron-down"></span>
+                    </div>
+                </div> -->
                 <span>
                     <select type="text" name="">
                         <option value="volvo">請選擇縣市</option>
@@ -290,8 +305,8 @@
                     <span data-toggle="modal" data-target="#myModal">並同意亞培媽媽教室線上報名條款與隱私保護方針</span>且同意個人資料收集及使用關關規定。</div>
             </div>
             <div class="detailsButton">
-                 <button>放棄報名</button>
-                <button>確認報名</button> 
+                <button>放棄報名</button>
+                <button>確認報名</button>
             </div>
         </div>
 
@@ -317,15 +332,15 @@
         </div>
 
 
-    <div class="attention">
-        <div>亞培媽咪學苑注意事項：</div>
-        <p>1、席位有限，請先預約報名以免向隅。</p>
-        <p>2、預約報名者享有優先兌換贈品權利，座位保留至開課前15分鐘，請準時入場。</p>
-        <p>3、為維護講座品質，謝絕攜帶孩童入場。</p>
-        <p>4、為維護著作財產權，現場禁止錄音、錄影。</p>
-        <p>5、活動當天若有停車需求，請依該場地停車辦法自費繳費。</p>
-        <p>* 以上若有造成不便之處敬請諒解。</p>
-    </div>
+        <div class="attention">
+            <div>亞培媽咪學苑注意事項：</div>
+            <p>1、席位有限，請先預約報名以免向隅。</p>
+            <p>2、預約報名者享有優先兌換贈品權利，座位保留至開課前15分鐘，請準時入場。</p>
+            <p>3、為維護講座品質，謝絕攜帶孩童入場。</p>
+            <p>4、為維護著作財產權，現場禁止錄音、錄影。</p>
+            <p>5、活動當天若有停車需求，請依該場地停車辦法自費繳費。</p>
+            <p>* 以上若有造成不便之處敬請諒解。</p>
+        </div>
     </div>
 
     <!-- 底部版权 -->
