--- a/src/details.html
+++ b/src/details.html
@@ -187,10 +187,10 @@
                     <span>*</span>
                 </span>
                 <div class="iDate date">
-                        <input type="text"  placeholder="yyyy-mm-dd" >
-                        <button type="button" class="addOn"></button>
-                   </div>
-                            </div>
+                    <input type="text" placeholder="yyyy-mm-dd">
+                    <button type="button" class="addOn"></button>
+                </div>
+            </div>
 
             <div class="detialConditionDataInput">
                 <span>
@@ -198,9 +198,10 @@
                     <span>*</span>
                 </span>
                 <div class="iDate date">
-                        <input type="text"  placeholder="yyyy-mm-dd" >
-                        <button type="button" class="addOn"></button>
-                   </div>            </div>
+                    <input type="text" placeholder="yyyy-mm-dd">
+                    <button type="button" class="addOn"></button>
+                </div>
+            </div>
 
             <div class="detialConditionDataInput">
                 <span>
@@ -211,10 +212,7 @@
                     <input type="text" name="lname" />
                     <span class="glyphicon glyphicon-chevron-down"></span>
                 </div>
-                <!-- <select>
-                    <option value="volvo">1</option>
-                    <option value="saab">2</option>
-                </select> -->
+
             </div>
 
             <div class="detialConditionDataInputHP">
@@ -223,14 +221,14 @@
                     <span>*</span>
                 </span>
                 <span>
-                    <select type="text" name="">
-                        <option value="volvo">請選擇縣市</option>
-                        <option value="saab">上海</option>
-                    </select>
-                    <select type="text" name="">
-                        <option value="volvo">請選擇區</option>
-                        <option value="saab">上海</option>
-                    </select>
+                    <div>
+                        <input type="text" name="lname" />
+                        <span class="glyphicon glyphicon-chevron-down"></span>
+                    </div>
+                    <div>
+                        <input type="text" name="lname" />
+                        <span class="glyphicon glyphicon-chevron-down"></span>
+                    </div>
                 </span>
             </div>
             <div class="detialConditionDataInput">
@@ -250,25 +248,16 @@
                     <span>居住地址</span>
                     <span>&nbsp</span>
                 </span>
-                <!-- <div>
-                    <div>
-                        <input type="text" name="lname" placeholder="請輸入生產醫院" />
-                        <span class="glyphicon glyphicon-chevron-down"></span>
-                    </div>
-                    <div>
-                        <input type="text" name="lname" placeholder="請輸入生產醫院" />
-                        <span class="glyphicon glyphicon-chevron-down"></span>
-                    </div>
-                </div> -->
+
                 <span>
-                    <select type="text" name="">
-                        <option value="volvo">請選擇縣市</option>
-                        <option value="saab">上海</option>
-                    </select>
-                    <select type="text" name="">
-                        <option value="volvo">請選擇區</option>
-                        <option value="saab">上海</option>
-                    </select>
+                    <div>
+                        <input type="text" name="lname" placeholder="請選擇縣市" />
+                        <span class="glyphicon glyphicon-chevron-down"></span>
+                    </div>
+                    <div>
+                        <input type="text" name="lname" placeholder="請選擇區" />
+                        <span class="glyphicon glyphicon-chevron-down"></span>
+                    </div>
                 </span>
             </div>
             <div class="detialConditionDataInput">
