complete.html done

--- a/src/complete.html
+++ b/src/complete.html
@@ -44,24 +44,24 @@
 			<div class="complete-wizard">
 				<div>
 					<div>1</div>
-					<div><p></p></div>
+					<div><p>會員資料</p></div>
 				</div>
 				<div>
 					<div>2</div>
-					<div><p></p></div>
+					<div><p>寶寶資料</p></div>
 				</div>
 				<div>
 					<div>3</div>
-					<div><p></p></div>
+					<div><p>完成註冊</p></div>
 				</div>
 			</div>
 			<div class="complete-title">
-				
-				<p>會員登入</p>
+				<img src="images/icon_ok.png" alt="" />
+				<p>恭喜您已完成註冊</p>
 			</div>
 
 			<div class="complete-button">		
-				<button class="btn-md-orange">登入</button>
+				<button class="btn-md-orange">返回首頁</button>
 			</div>
 
 
