--- a/src/information.html
+++ b/src/information.html
@@ -10,6 +10,7 @@
     <link href="./css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="./css/bootstrap-datetimepicker.css" rel="stylesheet" type="text/css" />
     <link href="./css/details.css" rel="stylesheet" type="text/css" />
+    <link href="./css/mobileSelect.css" rel="stylesheet" type="text/css" />
 
     <link href="./css/information.css" rel="stylesheet" type="text/css" />
 
@@ -119,13 +120,11 @@
                 <span>*</span>
             </span>
             <span>
-                <div>
-                    <input type="text" name="lname" />
-                    <span class="glyphicon glyphicon-chevron-down"></span>
+                <div id="trigger2" class="select">
+
                 </div>
-                <div>
-                    <input type="text" name="lname" />
-                    <span class="glyphicon glyphicon-chevron-down"></span>
+                <div id="trigger3" class="select">
+
                 </div>
             </span>
         </div>
@@ -136,7 +135,6 @@
             </span>
             <div class="informationInput">
                 <input type="text" name="lname" placeholder="請輸入生產醫院" />
-                <span class="glyphicon glyphicon-chevron-down"></span>
             </div>
         </div>
         <div class="detialConditionDataInput">
@@ -159,13 +157,11 @@
                 <span>*</span>
             </span>
             <span>
-                <div>
-                    <input type="text" name="lname" placeholder="請選擇縣市" />
-                    <span class="glyphicon glyphicon-chevron-down"></span>
+                <div id="trigger2" class="select">
+
                 </div>
-                <div>
-                    <input type="text" name="lname" placeholder="請選擇區" />
-                    <span class="glyphicon glyphicon-chevron-down"></span>
+                <div id="trigger3" class="select">
+
                 </div>
             </span>
         </div>
@@ -299,6 +295,8 @@
     <script src="./js/bootstrap.min.js"></script>
     <script type="text/javascript" src="./js/moment.js"></script>
     <script type="text/javascript" src="./js/bootstrap-datetimepicker.js"></script>
+    <script type="text/javascript" src="./js/mobileSelect.min.js"></script>
+
     <script src="./js/index.js"></script>
 
 </body>
